# practical-nlp-2021

./: .gitignore  README.md  pyproject.toml  we.md
0_sentiment_analysis/: 0_bag_of_words_with_learned_embeddings.ipynb  1_fine_tune_bert_for_sentiment_analysis.ipynb  2_named_entity_recognition.ipynb  Load_custom_data_with_torchtext.ipynb
2_chatbot/: README.md  seq2seq.ipynb  seq2seq_simple.ipynb
notebooks/: 0_practical_pytorch.ipynb  1_fine_tune_bert_for_sentiment_analysis.ipynb  X. Fine-tune BERT for sentence classification.ipynb
section_0_sentiment_analysis/: 0_bag_of_words_with_learned_embeddings.ipynb  0_practical_pytorch.ipynb  Z_Fine_tunning_BERT_for_sentiment_analysis_with_Huggingface_transformers.ipynb
spam_detection/: .env  pyproject.toml
spam_detection/noteboooks/: model.ipynb  model_0.ipynb  model_0_bow.ipynb  model_1_bow_with_glove.ipynb  model_2_cnn_for_text.ipynb  model_4_fine_tune_BERT.ipynb
spam_detection/spam_detection/ml/: model.py
