[tool.poetry]
name = "practical-nlp-2021"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
torch = "^1.7.0"
sklearn = "^0.0"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
torchtext = "^0.8.0"
transformers = "^4.0.0"
pandas = "^1.1.4"
spacy = "^2.3.4"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
